--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,31 +1,17 @@
-# Define the server that listens for incoming requests
+# nginx/nginx.conf
+
 server {
-    # Listen on port 80, the standard HTTP port
     listen 80;
 
-    # Define the root directory for static files
-    # This path matches the volume mount in docker-compose.yml
-    root /usr/share/nginx/html;
-    # Specify the default file to serve
-    index index.html;
-
-    # This location block handles all incoming requests
     location / {
-        # 'try_files' directive checks for the existence of files in order and uses the first one it finds.
-        # 1. $uri: Tries to find a file with the exact name of the request (e.g., /style.css).
-        # 2. $uri/: Tries to find a directory with that name.
-        # 3. @app: If neither a file nor a directory is found, it passes the request
-        #    to the named location '@app', which proxies to our Flask service.
-        try_files $uri $uri/ @app;
-    }
-
-    # This is the named location for our Flask application proxy
-    location @app {
-        # Forward the request to the 'app' service on port 5000.
-        # 'app' is resolvable because Docker Compose creates a network for our services.
+        # Forward all requests to the 'app' service on port 5000.
+        # 'app' is the service name from your docker-compose file.
         proxy_pass http://app:5000;
+        
+        # These headers are important for the backend app to know about the original request
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
