Adding ignore line

--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -5,9 +5,11 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+if: "!contains(github.event.head_commit.message, 'ignore')"
+
 env:
   AWS_REGION: us-east-1
-  ECR_REGISTRY: 704505749045.dkr.ecr.us-east-1.amazonaws.com
+  ECR_REGISTRY: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
   ECR_REPOSITORY: mywebsite
   IMAGE_FILE_NAME: my-app-image.tar
 
