--- a/app/static/files/githubactions-demo.yaml
+++ b/app/static/files/githubactions-demo.yaml
@@ -5,9 +5,11 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+if: "!contains(github.event.head_commit.message, 'ignore')"
+
 env:
   AWS_REGION: us-east-1
-  ECR_REGISTRY: 704505749045.dkr.ecr.us-east-1.amazonaws.com
+  ECR_REGISTRY: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
   ECR_REPOSITORY: mywebsite
   IMAGE_FILE_NAME: my-app-image.tar
 
@@ -50,7 +52,7 @@ jobs:
   test:
     name: Test Image
     runs-on: ubuntu-latest
-    needs: build # This job runs only after 'build' succeeds
+    needs: build
     steps:
       - name: Download image artifact
         uses: actions/download-artifact@v4
@@ -78,7 +80,7 @@ jobs:
   push:
     name: Push Image to ECR
     runs-on: ubuntu-latest
-    needs: [build, test] # This job runs only after 'build' and 'test' succeed
+    needs: [build, test]
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -103,8 +105,36 @@ jobs:
       - name: Tag and Push image to Amazon ECR
         run: |
           IMAGE_TAG="${{ needs.build.outputs.image_tag }}"
-          # Add the 'latest' tag to the image
           docker tag ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-          # Push both the version and 'latest' tags
           docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }} --all-tags
-          
+
+  # ===============================================
+  # Job 4: Update Kubernetes Manifest Repo
+  # ===============================================
+  update-kubernetes-repo:
+    name: Update Kubernetes Manifest
+    runs-on: ubuntu-latest
+    needs: [build, push] # Runs after build (to get the tag) and push (to ensure image exists)
+
+    steps:
+      - name: Checkout Kubernetes repo
+        uses: actions/checkout@v4
+        with:
+          repository: liormilliger/mywebsite-k8s
+          token: ${{ secrets.GH_PAT }}
+
+      - name: Install yq for YAML processing
+        run: sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
+
+      - name: Update image tag in values.yaml
+        run: |
+          IMAGE_TAG="${{ needs.build.outputs.image_tag }}"
+          # This command targets the .image.tag key in your specified values.yaml file
+          yq eval '.image.tag = "'"$IMAGE_TAG"'"' -i 'my-app-chart/values.yaml'
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions@github.com"
+          git commit -am "Update image tag for mywebsite to ${{ needs.build.outputs.image_tag }}"
+          git push
