Adding ignore line and var for accout id

--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -9,7 +9,7 @@ if: "!contains(github.event.head_commit.message, 'ignore')"
 
 env:
   AWS_REGION: us-east-1
-  ECR_REGISTRY: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
+  ECR_REGISTRY: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
   ECR_REPOSITORY: mywebsite
   IMAGE_FILE_NAME: my-app-image.tar
 
