--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -2,24 +2,22 @@ name: Build, Test, and Push Docker Image to ECR
 
 on:
   push:
-    # This workflow will now run on both main and database branches
-    branches: [ "main", "database" ]
+    branches: [ "main", "database" ] # Trigger on both branches
   workflow_dispatch:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REGISTRY: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
+  ECR_REGISTRY: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1
   ECR_REPOSITORY: mywebsite
   IMAGE_FILE_NAME: my-app-image.tar
 
 jobs:
   # ===============================================
-  # Job 1: Build Docker Image and Create Version Tag
+  # Job 1: Build the Docker Image
   # ===============================================
   build:
-    name: Build and Tag Image
+    name: Build Image
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'ignore')"
     outputs:
       image_tag: ${{ steps.version.outputs.IMAGE_TAG }}
     steps:
@@ -29,15 +27,18 @@ jobs:
       - name: Define Image Version Tag
         id: version
         run: |
+          # Use branch name in the tag for non-main branches
           BRANCH_NAME=$(echo ${{ github.ref_name }} | sed 's/[^a-zA-Z0-9]/-/g')
           VERSION="1.${{ github.run_number }}-${BRANCH_NAME}"
           echo "IMAGE_TAG=${VERSION}" >> $GITHUB_OUTPUT
 
       - name: Build Docker image
-        run: docker build -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.version.outputs.IMAGE_TAG }} .
+        run: |
+          docker build -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.version.outputs.IMAGE_TAG }} .
 
-      - name: Save Docker image for subsequent jobs
-        run: docker save ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.version.outputs.IMAGE_TAG }} --output ${{ env.IMAGE_FILE_NAME }}
+      - name: Save Docker image as an artifact
+        run: |
+          docker save ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.version.outputs.IMAGE_TAG }} --output ${{ env.IMAGE_FILE_NAME }}
 
       - name: Upload image artifact
         uses: actions/upload-artifact@v4
@@ -46,7 +47,7 @@ jobs:
           path: ${{ env.IMAGE_FILE_NAME }}
 
   # ===============================================
-  # Job 2: Run Integration Tests with Docker Compose
+  # Job 2: Run Integration Tests
   # ===============================================
   integration-test:
     name: Run Integration Tests
@@ -66,20 +67,25 @@ jobs:
         with:
           name: docker-image
 
-      - name: Load Docker image from artifact
-        run: docker load --input ${{ env.IMAGE_FILE_NAME }}
+      - name: Load Docker image
+        run: |
+          docker load --input ${{ env.IMAGE_FILE_NAME }}
 
       - name: Start services using Docker Compose
         env:
-          # This variable is passed to docker-compose.ci.yaml
+          # This variable is passed to the docker-compose.ci.yaml file
           WEB_IMAGE: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ needs.build.outputs.image_tag }}
-        run: docker-compose -f docker-compose.ci.yaml -p ci up -d
+        run: |
+          docker-compose -f docker-compose.ci.yaml -p ci up -d
 
-      - name: Wait for services to be fully up
-        run: echo "Waiting for services to initialize..." && sleep 20
+      - name: Wait for services to be healthy
+        run: |
+          echo "Waiting for containers to become healthy..."
+          sleep 15 # Give a buffer for services to initialize
 
       - name: Execute Database Test Script
         run: |
+          # The network name 'ci_default' is created by using '-p ci' with docker-compose
           docker run --rm --network=ci_default \
             -v $(pwd)/test_db.py:/test_db.py \
             -e POSTGRES_HOST=db \
@@ -90,19 +96,18 @@ jobs:
             python:3.9-slim \
             sh -c "pip install psycopg2-binary requests && python -u /test_db.py"
 
-      - name: Stop services after test
-        if: always()
+      - name: Stop services
         run: docker-compose -f docker-compose.ci.yaml -p ci down
+        # This cleanup step will run even if the test script fails.
+        if: always()
 
   # ===============================================
-  # Job 3: Push Image to ECR (contingent on tests passing)
+  # Job 3: Push Image to ECR (only on success)
   # ===============================================
   push-to-ecr:
     name: Push Image to ECR
     runs-on: ubuntu-latest
-    # This job now depends on the success of integration-test
-    needs: [build, integration-test]
-    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/database') && success()
+    needs: [build, integration-test] # Depends on both build and successful tests
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -119,34 +124,30 @@ jobs:
         with:
           name: docker-image
 
-      - name: Load Docker image from artifact
-        run: docker load --input ${{ env.IMAGE_FILE_NAME }}
+      - name: Load Docker image
+        run: |
+          docker load --input ${{ env.IMAGE_FILE_NAME }}
 
       - name: Tag and Push image to Amazon ECR
         run: |
           IMAGE_TAG="${{ needs.build.outputs.image_tag }}"
-          # Also tag with 'latest' if on the main branch for easy reference
-          if [ "${{ github.ref_name }}" == "main" ]; then
-            docker tag ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-          fi
+          docker tag ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
           docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }} --all-tags
 
   # ===============================================
-  # Job 4: Update K8s Repo (GitOps Trigger)
+  # Job 4: Update Kubernetes Manifest Repo
   # ===============================================
   update-kubernetes-repo:
     name: Update Kubernetes Manifest
     runs-on: ubuntu-latest
-    # This job runs last, after successful testing and pushing.
-    needs: [push-to-ecr]
-    if: github.ref == 'refs/heads/database' && success()
+    needs: [build, push-to-ecr]
     steps:
       - name: Checkout Kubernetes repo
         uses: actions/checkout@v4
         with:
           repository: liormilliger/mywebsite-k8s
           token: ${{ secrets.GH_PAT }}
-          ref: database
+          ref: ${{ github.ref_name }} # Checkout the same branch name
 
       - name: Install yq for YAML processing
         run: sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
