--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REGISTRY: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1
+  ECR_REGISTRY: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
   ECR_REPOSITORY: mywebsite
   IMAGE_FILE_NAME: my-app-image.tar
 
