Setting CI dependencies straight

--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -168,7 +168,7 @@ jobs:
     name: Push Image to ECR
     runs-on: ubuntu-latest
     # Added 'security-scan' to the needs context
-    needs: [build, integration-test-db, integration-test-app, security-scan]
+    needs: [build, integration-test-app, security-scan]
     if: success() && !contains(toJSON(github.event.commits.*.message), 'skip')
     steps:
       - name: Configure AWS credentials
@@ -201,7 +201,7 @@ jobs:
   update-kubernetes-repo:
     name: Update Kubernetes Manifest
     runs-on: ubuntu-latest
-    needs: [build, push-to-ecr]
+    needs: [push-to-ecr]
     steps:
       - name: Checkout Kubernetes repo
         uses: actions/checkout@v4
