--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -200,7 +200,7 @@ jobs:
   update-kubernetes-repo:
     name: Update Kubernetes Manifest
     runs-on: ubuntu-latest
-    needs: [push-to-ecr]
+    needs: [build, push-to-ecr]
     steps:
       - name: Checkout Kubernetes repo
         uses: actions/checkout@v4
@@ -223,4 +223,3 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git commit -am "Update image tag for mywebsite to ${{ needs.build.outputs.image_tag }}"
           git push
-          
