--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-# docker-compose.yml
-
 version: '3.8'
 
 services:
@@ -10,49 +8,51 @@ services:
       - "5000"
     volumes:
       - ./app:/app
-    # The app service will wait for the db service to be healthy before starting.
     depends_on:
       db:
         condition: service_healthy
-    # Environment variables for the application to connect to the database.
     environment:
-      - DATABASE_URL=postgresql://admin:password@db:5432/mywebsite
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/mywebsite
 
   nginx:
     image: nginx:latest
     container_name: mywebsite-nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      # We ONLY need to mount the configuration file.
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     depends_on:
       - app
+  
+  certbot:
+    image: certbot/certbot
+    container_name: mywebsite-certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    command: sh -c "trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;"
 
   db:
     image: postgres:15-alpine
     container_name: mywebsite-db
     restart: always
-    # Set the user, password, and database name for PostgreSQL.
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=mywebsite
     ports:
-      # Expose port 5432 to the host for local development access if needed.
       - "5432:5432"
     volumes:
-      # This named volume will persist the database data.
       - postgres_data:/var/lib/postgresql/data
-      # This mounts the SQL script to the initialization directory.
-      # Any .sql files in this directory will be run on first start.
       - ./init:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -d mywebsite"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d mywebsite"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-# Define the named volume for data persistence.
 volumes:
   postgres_data:
