--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -12,9 +12,7 @@ env:
   IMAGE_FILE_NAME: my-app-image.tar
 
 jobs:
-  # ===============================================
-  # Job 1: Build the Docker Image
-  # ===============================================
+
   build:
     name: Build Image
     runs-on: ubuntu-latest
@@ -43,9 +41,6 @@ jobs:
           name: docker-image
           path: ${{ env.IMAGE_FILE_NAME }}
 
-  # ===============================================
-  # Job 2A: Run Integration Tests (Database)
-  # ===============================================
   integration-test-db:
     name: Run Database Integration Tests
     runs-on: ubuntu-latest
@@ -94,9 +89,6 @@ jobs:
         if: always()
         run: docker-compose -f docker-compose.ci.yaml -p ci down
 
-  # ===============================================
-  # Job 2B: Run Integration Tests (Application Only)
-  # ===============================================
   integration-test-app:
     name: Run Application Tests
     runs-on: ubuntu-latest
@@ -119,27 +111,22 @@ jobs:
           echo "Running application-only tests..."
           echo "Application test placeholder successful!"
 
-  # ===============================================
-  # Job 2C: Security Scan Job
-  # ===============================================
   security-scan:
     name: Security Scan
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      contents: read # for actions/checkout
-      security-events: write # for github/codeql-action/upload-sarif to upload results
+      contents: read
+      security-events: write 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # Required for Gitleaks to scan full repository history
           fetch-depth: 0
 
       - name: Scan repository for secrets with Gitleaks
         uses: gitleaks/gitleaks-action@v2
         env:
-          # By default, this action will fail the job if it finds leaks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Download image artifact
@@ -153,7 +140,6 @@ jobs:
           input: '${{ env.IMAGE_FILE_NAME }}'
           format: 'sarif'
           output: 'trivy-results.sarif'
-          # Fail the build for HIGH or CRITICAL vulnerabilities
           severity: 'CRITICAL,HIGH'
 
       - name: Upload Trivy scan results to GitHub Security tab
@@ -161,13 +147,9 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
 
-  # ===============================================
-  # Job 3: Push Image to ECR (Now depends on security scan)
-  # ===============================================
   push-to-ecr:
     name: Push Image to ECR
     runs-on: ubuntu-latest
-    # Added 'security-scan' to the needs context
     needs: [build, integration-test-app, security-scan]
     if: success() && !contains(toJSON(github.event.commits.*.message), 'skip')
     steps:
@@ -194,9 +176,7 @@ jobs:
           IMAGE_TAG="${{ needs.build.outputs.image_tag }}"
           docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${IMAGE_TAG}
 
-  # ===============================================
-  # Job 4: Update Kubernetes Manifest Repo
-  # ===============================================
+
   update-kubernetes-repo:
     name: Update Kubernetes Manifest
     runs-on: ubuntu-latest
