--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,8 @@ services:
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    command: sh -c "trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;"
+    entrypoint: /bin/sh
+    command: -c "trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;"
 
   db:
     image: postgres:15-alpine
