nginx.conf 404 added

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name liormilliger.com;
 
+    access_log /var/log/nginx/liormilliger_access.log;
+    error_log /var/log/nginx/liormilliger_error.log;
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -15,10 +18,17 @@ server {
     listen 443 ssl;
     server_name liormilliger.com;
 
+    access_log /var/log/nginx/liormilliger_access.log;
+    error_log /var/log/nginx/liormilliger_error.log;
+    
     ssl_certificate /etc/letsencrypt/live/liormilliger.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/liormilliger.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location ~* (?:\.php$|\.env|\.git|aws-credentials|wp-admin|wp-login|xmlrpc) {
+        return 404;
+    }
 
     location / {
         proxy_pass http://app:5000;
