Nginx conf copied with logs enabled

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,23 +18,23 @@ server {
     listen 443 ssl;
     server_name liormilliger.com;
 
-    access_log /var/log/nginx/liormilliger_access.log;
-    error_log /var/log/nginx/liormilliger_error.log;
-    
     ssl_certificate /etc/letsencrypt/live/liormilliger.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/liormilliger.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    access_log /var/log/nginx/liormilliger_access.log;
+    error_log /var/log/nginx/liormilliger_error.log;
+    
     location ~* (?:\.php$|\.env|\.git|aws-credentials|wp-admin|wp-login|xmlrpc) {
         return 404;
     }
-
+    
     location / {
         proxy_pass http://app:5000;
         proxy_set_header Host \$host;
         proxy_set_header X-Real-IP \$remote_addr;
-        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-For \$remote_addr;
         proxy_set_header X-Forwarded-Proto \$scheme;
     }
 }
